--- a/index.html
+++ b/index.html
@@ -1,82 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Computer Project</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-<style>
-body{
-  margin:0;
-  font-family:'Poppins',sans-serif;
-  background:#fff8dc;
-  text-align:center;
-}
-nav{
-  background:#ffb703;
-  padding:15px;
-}
-nav a{
-  margin:15px;
-  text-decoration:none;
-  font-weight:600;
-  color:black;
-  font-size:18px;
-}
-nav a:hover{color:white}
-
-.content{
-  padding:30px;
-  animation:fade 1.5s ease;
-}
-img{
-  width:60%;
-  border-radius:10px;
-  margin:20px auto;
-  animation:zoom 1.5s ease;
-}
-
-@keyframes fade{
-  from{opacity:0; transform:translateY(20px)}
-  to{opacity:1; transform:translateY(0)}
-}
-@keyframes zoom{
-  from{transform:scale(0.8)}
-  to{transform:scale(1)}
-}
-
-footer{
-  background:#ffb703;
-  padding:10px;
-  margin-top:30px;
-}
-</style>
+    <title>Computer Project</title>
+    <style>
+        body { background-color: #fff9c4; font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        div.menu { background-color: #1a237e; padding: 15px 0; text-align: center; }
+        div.menu a { color: white; text-decoration: none; font-weight: bold; margin: 0 15px; font-size: 18px; }
+        div.menu a:hover { color: #f57f17; }
+        div.content { text-align: center; padding: 50px 20px; }
+        h1 { color: #ff6f00; }
+        p { color: #333333; font-size: 18px; }
+        p.box { background-color: #fff3e0; padding: 15px; border-radius: 10px; display: inline-block; margin: 15px 0; }
+        img { width: 400px; border-radius: 10px; margin: 20px auto; display: block; }
+    </style>
 </head>
-
 <body>
-<nav>
-  <a href="index.html">Home</a>
-  <a href="hardware.html">Hardware</a>
-  <a href="software.html">Software</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
-</nav>
 
-<div class="content">
-<h1>Computer Project</h1>
-
-<p>
-<b>Name:</b> Astitva Kumar Singh<br>
-<b>School:</b> Guru Nanak English School<br>
-<b>Class:</b> 10 &nbsp; <b>Section:</b> A
-</p>
-
-<img src="images/computer1.jpg">
-
-<p>This website is created as a computer project using HTML and CSS.</p>
+<div class="menu">
+    <a href="index.html">Home</a>
+    <a href="hardware.html">Hardware</a>
+    <a href="software.html">Software</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
 </div>
 
-<footer>© Computer Project | Class 10</footer>
+<div class="content">
+    <h1>Computer Basics</h1>
+    <p class="box">This website is created for my Class 10 Computer Project.</p>
+    <p class="box">It explains basic computer concepts with examples of Hardware and Software.</p>
+    
+    <!-- Image text ke neeche aur center me -->
+    <img src="images/computer1.jpg" alt="Computer Image">
+</div>
+
 </body>
 </html>
+
